err/capirca.err
Listing '.'...
Compiling './aclcheck_cmdline.py'...
Compiling './aclgen.py'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Listing './def'...
Listing './definate'...
Compiling './definate/__init__.py'...
Compiling './definate/definition_filter.py'...
Compiling './definate/dns_generator.py'...
Compiling './definate/file_filter.py'...
Compiling './definate/filter_factory.py'...
Compiling './definate/generator.py'...
Compiling './definate/generator_factory.py'...
Compiling './definate/global_filter.py'...
Compiling './definate/yaml_validator.py'...
Compiling './definate.py'...
Listing './include'...
Listing './lib'...
Compiling './lib/__init__.py'...
Compiling './lib/aclcheck.py'...
Compiling './lib/aclgenerator.py'...
Compiling './lib/arista.py'...
Compiling './lib/aruba.py'...
Compiling './lib/brocade.py'...
Compiling './lib/cisco.py'...
Compiling './lib/ciscoasa.py'...
Compiling './lib/ciscoxr.py'...
Compiling './lib/demo.py'...
Compiling './lib/gce.py'...
Compiling './lib/ipset.py'...
Compiling './lib/iptables.py'...
Compiling './lib/juniper.py'...
Compiling './lib/junipersrx.py'...
Compiling './lib/nacaddr.py'...
Compiling './lib/naming.py'...
Compiling './lib/nftables.py'...
Compiling './lib/nsxv.py'...
Compiling './lib/packetfilter.py'...
Compiling './lib/paloaltofw.py'...
Compiling './lib/pcap.py'...
Compiling './lib/policy.py'...
Compiling './lib/policy_simple.py'...
Compiling './lib/policyreader.py'...
***   File "./lib/policyreader.py", line 98
    except IOError, error_info:
                  ^
SyntaxError: invalid syntax

Compiling './lib/port.py'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/capirca-1.118.egg-info'...
Listing './lib/python3.5/site-packages/definate'...
Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/ipaddr-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/lib'...
Compiling './lib/python3.5/site-packages/lib/policyreader.py'...
***   File "./lib/python3.5/site-packages/lib/policyreader.py", line 98
    except IOError, error_info:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/lib'...
Compiling './lib/python3.5/site-packages/tests/lib/iptables_test.py'...
***   File "./lib/python3.5/site-packages/tests/lib/iptables_test.py", line 980
    ports = [str(x) for x in 1, 3, 5, 7, 9, 11, 13, 15, 17, '19-21', '23-25',
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tools'...
Compiling './lib/setup.py'...
Compiling './lib/speedway.py'...
Compiling './lib/srxlo.py'...
Compiling './lib/summarizer.py'...
Compiling './lib/windows.py'...
Compiling './lib/windows_advfirewall.py'...
Compiling './lib/windows_ipsec.py'...
Listing './policies'...
Listing './policies/includes'...
Listing './policies/pol'...
Listing './share'...
Listing './share/python-wheels'...
Listing './tests'...
Compiling './tests/__init__.py'...
Listing './tests/integration'...
Compiling './tests/integration/__init__.py'...
Compiling './tests/integration/aclgen_test.py'...
Listing './tests/lib'...
Compiling './tests/lib/__init__.py'...
Compiling './tests/lib/aclcheck_test.py'...
Compiling './tests/lib/aclgenerator_test.py'...
Compiling './tests/lib/arista_test.py'...
Compiling './tests/lib/aruba_test.py'...
Compiling './tests/lib/brocade_test.py'...
Compiling './tests/lib/cgrep_test.py'...
Compiling './tests/lib/cisco_test.py'...
Compiling './tests/lib/ciscoasa_test.py'...
Compiling './tests/lib/ciscoxr_test.py'...
Compiling './tests/lib/gce_test.py'...
Compiling './tests/lib/ipset_test.py'...
Compiling './tests/lib/iptables_test.py'...
***   File "./tests/lib/iptables_test.py", line 980
    ports = [str(x) for x in 1, 3, 5, 7, 9, 11, 13, 15, 17, '19-21', '23-25',
                              ^
SyntaxError: invalid syntax

Compiling './tests/lib/juniper_test.py'...
Compiling './tests/lib/junipersrx_test.py'...
Compiling './tests/lib/nacaddr_test.py'...
Compiling './tests/lib/naming_test.py'...
Compiling './tests/lib/nftables_test.py'...
Compiling './tests/lib/nsxv_functtest.py'...
Compiling './tests/lib/nsxv_mocktest.py'...
Compiling './tests/lib/nsxv_test.py'...
Compiling './tests/lib/nsxv_unittest.py'...
Compiling './tests/lib/packetfilter_test.py'...
Compiling './tests/lib/paloaltofw_test.py'...
Compiling './tests/lib/pcap_test.py'...
Compiling './tests/lib/policy_simple_test.py'...
Compiling './tests/lib/policy_test.py'...
Compiling './tests/lib/speedway_test.py'...
Compiling './tests/lib/srxlo_test.py'...
Compiling './tests/lib/summarizer_test.py'...
Compiling './tests/lib/windows_advfirewall_test.py'...
Compiling './tests/lib/windows_ipsec_test.py'...
Compiling './tests/lib/windows_test.py'...
Listing './tools'...
Compiling './tools/__init__.py'...
Compiling './tools/cgrep.py'...
